# Web-Dev

lab 10/hh_back/: db.sqlite3
lab1/khanacademy/1. Intro to Html/: textEmphasis.html  writeAPoem.html
lab1/khanacademy/2. Intro to Css/: applesAndBananasClass.html  colorfulCreature.html  picturePerfectTrip.html  travelWebSite.html
lab1/khanacademy/3. More Html tags/: linksForLearning.html  theDinnerTable.html
lab1/khanacademy/4. Css text properties/: foncyFontFamilies.html  greatBigFontSize.html
lab1/khanacademy/5. Css layout/: classyGallery.html
lab1/khanacademy/6. More Css selectors/: descendantRule.html  theBoxerModel.html
lab1/khanacademy/html/: HTML_basics.html  applesAndBananasClass.html  blogProject.html  classesOfElements.html  cssFontFamilyProperty.html  floattingClouds.html  fontFormatsss.html  fontSizeProperty.html  groupTheGroupers.html  groupedAnimals.html  posPlanet.html  resizingTheBlock.html  (+5 more)
lab2/facebook/: facebook.html  styles.css
lab2/instagram/: instagram.html
lab2/microsoft/: microsoft.html
lab3/todo/: index.html
lab6/album/: package-lock.json
lab7/: a.py  db.sqlite3  pyproject.toml
lab7/DRF/: settings.py  urls.py
lab7/myDRF/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
lab7/myDRF/migrations/: 0001_initial.py  0002_getimage.py  0003_album.py
lab7/polls/: models.py  urls.py  views.py
lab7/polls/migrations/: 0001_initial.py
lab7/polls/templates/polls/: detail.html  index.html
lab7/static/: hello.html
lab7/templates/: hello.html
lab8/lab8/: pyproject.toml
lab9/lab8/: db.sqlite3
(+113 files in other folders)
